Add JsonProperty annotation to enum constant in java generator. Add support JsonValue annotation on field level. Add more test for java and kotlin for micronaut-openapi Fix wrong interpretation Schema annotation on field level Fix java generator reserved words list Make OpenApiGroupInfoVisitor aggregated